# django-woah

./: .gitignore  CHANGELOG.MD  NOTICE  README.md  exported_requirements.txt  manage.py  pyproject.toml
.github/workflows/: ci.yml
django_woah/: asgi.py  authorization.py  models.py  settings.py  urls.py  wsgi.py
django_woah/authorization/: __init__.py  conditions.py  context.py  enum.py  indirect_perms.py  knowledge_base.py  scheme.py  solver.py
django_woah/drf/: __init__.py  fields.py  permission.py  views.py
django_woah/migrations/: 0001_initial.py  0002_assignedperm_created_at_assignedperm_updated_at_and_more.py  0002_usergroup_unique_name.py
django_woah/tests/: test_utils.py
django_woah/utils/: logic.py  models.py  q.py
examples/issue_tracker/: manage.py  pytest.ini
examples/issue_tracker/base_app/: apps.py  authorization.py  conftest.py  models.py  pytest_fixtures.py  test_api_accounts.py  test_api_issues.py  test_api_memberships.py  test_authorizations.py
examples/issue_tracker/base_app/api/: serializers.py  urls.py  views.py
examples/issue_tracker/base_app/migrations/: 0001_initial.py
examples/issue_tracker/issue_tracker/: settings.py  urls.py
