[tool.poetry]
name = "django-woah"
version = "0.1.0"
description = ""
authors = ["Bogdan Petrea <bogdan@presslabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
uuid6 = "^2023.5.2"
djangorestframework = {version = "^3.14.0", optional = true}
black = "^23.9.1"
pytest = "^7.4.2"
pytest-django = "^4.5.2"

[tool.poetry.extras]
drf = ["djangorestframework"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

